# nga

./: AGENTSCRIPT_REQUIREMENTS_TEMPLATE.md  convereted_ngaagent.yaml  planner_oldagent.json  working_ngaagent.yaml
WASM/: Cargo.toml  LICENSE-MIT  README.md
WASM/src/: converter.rs  helpers.rs  lib.rs  models.rs  report_generator.rs  variable_processor.rs  yaml_generator.rs
claude-skills/: NGA_CONVERTER_SKILL.md  NGA_EXAMPLES_QUICKREF.md  NGA_INPUT_OUTPUT_SCHEMA.md  README.md
website/: DISCLAIMER.md  LEARN.md  Procfile  README.md  agent.json  app.json  auth-server.js  converted_agent.yaml  converter.js  index.html  login.html  nga-rules.json  nga.nginx  nga_sample.yaml  package-lock.json  package.json  styles.css
website/config/: nga-auth.service  nginx.conf.erb
website/wasm/: LICENSE-APACHE  README.md  nga_converter.d.ts  nga_converter.js  nga_converter_bg.js  nga_converter_bg.wasm  nga_converter_bg.wasm.d.ts  package.json
