[package]
name = "nga-converter"
version = "0.1.0"
edition = "2021"
authors = ["Claudio Moraes"]
description = "NGA YAML Interpreter - Core conversion logic compiled to WebAssembly"
license = "MIT OR Apache-2.0"
repository = "https://github.com/claudiomoraes/nga"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
once_cell = "1.19"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
